--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
     "sweetalert": "^2.1.2",
-    "sweetalert2": "^11.7.32"
+    "sweetalert2": "^11.7.32",
+    "swiper": "^10.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
