--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-loader-spinner": "^5.4.5",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.17.0",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
+    "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.7.32",
