--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-elastic-carousel": "^0.11.5",
     "react-fast-marquee": "^1.6.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5",
     "react-rating": "^2.0.5",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.17.0",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
