--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
       "preview": "vite preview"
    },
    "dependencies": {
+      "@headlessui/react": "^1.7.17",
+      "@stripe/react-stripe-js": "^2.4.0",
+      "@stripe/stripe-js": "^2.2.0",
+      "@tanstack/react-query": "^5.12.2",
+      "axios": "^1.6.2",
       "firebase": "^10.5.0",
       "localforage": "^1.10.0",
       "match-sorter": "^6.3.1",
