--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
       "react-responsive": "^9.0.2",
       "react-router-dom": "^6.17.0",
       "react-slick": "^0.29.0",
+      "recharts": "^2.10.3",
       "slick-carousel": "^1.8.1",
       "sort-by": "^0.0.2",
       "sweetalert2": "^11.6.13",
